tests/ui/not_enough_space.stderr
error: not enough space for field
 --> tests/ui/not_enough_space.rs:6:3
  |
6 |   #[bits(1)]
  |   ^
